@@ -7,6 +7,9 @@ current
 Features added
 --------------
 
+* Module level `tounicode` function to return XML serialization as Python
+  unicode string (equavalent to `tostring` function)
+
 * Parsing a unicode string no longer copies the string (reduced memory
   footprint)
 
